--- a/src/MSO.AppStimmer/MSO.AppStimmer.Core/MSO.AppStimmer.Core.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer.Core/MSO.AppStimmer.Core.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Models\AppStimmerUser.cs" />
     <Compile Include="Models\ModelBase.cs" />
     <Compile Include="Models\EditableModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
