--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1EDAEDA6-2501-442C-999F-51B3BFC75DC1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MSO.AppStimmer</RootNamespace>
-    <AssemblyName>MSO.AppStimmer</AssemblyName>
+    <RootNamespace>MSO.StimmApp</RootNamespace>
+    <AssemblyName>MSO.StimmApp</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile44</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -128,9 +128,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\MSO.AppStimmer.Core\MSO.AppStimmer.Core.csproj">
+    <ProjectReference Include="..\..\MSO.AppStimmer.Core\MSO.StimmApp.Core.csproj">
       <Project>{b8a3ce85-ab7f-49dd-a574-ea7e9dd3b0e3}</Project>
-      <Name>MSO.AppStimmer.Core</Name>
+      <Name>MSO.StimmApp.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\MSO.Common\MSO.Common.csproj">
       <Project>{710a7564-2971-41ff-9dfd-db6fa8d0f2f5}</Project>
@@ -172,6 +172,13 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Images\Anonymous.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Icons\star_blue_circle.scale-100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Icons\thumbs_down_red_circle.scale-100.png" />
+    <EmbeddedResource Include="Resources\Icons\thumbs_up_green_circle.scale-100.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
