--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -2,5 +2,11 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
+  <package id="SkiaSharp" version="1.59.1" targetFramework="xamarinios10" />
+  <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
