--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -3,5 +3,10 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="portable46-net451+win81" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="portable46-net451+win81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable46-net451+win81" />
+  <package id="SkiaSharp" version="1.59.1" targetFramework="portable46-net451+win81" />
+  <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="portable46-net451+win81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="portable46-net451+win81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
