--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.MSO.AppStimmer" android:versionCode="1" android:versionName="1.0">
-	<uses-sdk android:minSdkVersion="15" />
-  <application android:label="@string/app_name"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.MSO.AppStimmer" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="@string/app_name"></application>
 </manifest>
