--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Views\Controls\AppStimmerEditorOverviewView.xaml.cs">
       <DependentUpon>AppStimmerEditorOverviewView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Controls\AppStimmersListView.xaml.cs">
+      <DependentUpon>AppStimmersListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Controls\CurrentUserView.xaml.cs">
       <DependentUpon>CurrentUserView.xaml</DependentUpon>
     </Compile>
@@ -267,6 +270,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\Controls\AppStimmerEditorDetailsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Controls\AppStimmersListView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
