--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Views\Controls\AppStimmerEditorDetailsView.xaml.cs">
       <DependentUpon>AppStimmerEditorDetailsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Controls\AppStimmerEditorHeader.xaml.cs">
+      <DependentUpon>AppStimmerEditorHeader.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Controls\AppStimmerEditorOverviewView.xaml.cs">
       <DependentUpon>AppStimmerEditorOverviewView.xaml</DependentUpon>
     </Compile>
@@ -276,6 +279,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\Controls\AppStimmersListView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Controls\AppStimmerEditorHeader.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
