--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -54,6 +54,9 @@
     <Compile Include="ViewModels\MainPageMasterViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="Views\Controls\AppStimmerAttachmentsListView.xaml.cs">
+      <DependentUpon>AppStimmerAttachmentsListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Controls\AppStimmerCardView.xaml.cs">
       <DependentUpon>AppStimmerCardView.xaml</DependentUpon>
     </Compile>
@@ -174,6 +177,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="Views\AppStimmerEditor\" />
     <Folder Include="Views\Messages\" />
   </ItemGroup>
   <ItemGroup>
@@ -285,6 +289,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\Controls\AppStimmerEditorHeader.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Controls\AppStimmerAttachmentsListView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
