--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -39,6 +39,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converter\AppStimmerAttachmentToViewConverter.cs" />
+    <Compile Include="Converter\AppStimmerAttachmentTypeToViewVisibilityConverter.cs" />
     <Compile Include="Converter\ImageResourceConverter.cs" />
     <Compile Include="Converter\IMultiValueConverter.cs" />
     <Compile Include="Converter\MultiBinding.cs" />
@@ -54,6 +56,12 @@
     <Compile Include="ViewModels\MainPageMasterViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="Views\Attachments\ImageAttachmentView.xaml.cs">
+      <DependentUpon>ImageAttachmentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Attachments\TextAttachmentView.xaml.cs">
+      <DependentUpon>TextAttachmentView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Controls\AppStimmerAttachmentsListView.xaml.cs">
       <DependentUpon>AppStimmerAttachmentsListView.xaml</DependentUpon>
     </Compile>
@@ -177,8 +185,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="Views\AppStimmerEditor\" />
-    <Folder Include="Views\Messages\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\Pages\AppStimmerPage.xaml">
@@ -295,6 +301,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\Controls\AppStimmerAttachmentsListView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Attachments\ImageAttachmentView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Attachments\TextAttachmentView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
