--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -5,7 +5,7 @@
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="monoandroid71" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
-  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid60" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="monoandroid71" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid71" />
@@ -18,17 +18,25 @@
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="monoandroid71" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid71" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="monoandroid60" />
-  <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="monoandroid60" />
-  <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="monoandroid60" />
-  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="monoandroid60" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.UI" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Design" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Transition" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="2.5.0.91635" targetFramework="monoandroid71" />
 </packages>
