--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -4,6 +4,7 @@
   <package id="akavache.core" version="5.0.0" targetFramework="xamarinios10" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="xamarinios10" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
+  <package id="MvvmLight" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
@@ -21,6 +22,6 @@
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="xamarinios10" />
-  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
+  <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.5.0.91635" targetFramework="xamarinios10" />
 </packages>
