--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -38,5 +38,6 @@
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="monoandroid71" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.5.0.91635" targetFramework="monoandroid71" />
 </packages>
