--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/packages.config
@@ -20,5 +20,6 @@
   <package id="Xamarin.FFImageLoading.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Svg" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.FFImageLoading.Svg.Forms" version="2.2.25" targetFramework="portable46-net451+win81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.2.25" targetFramework="portable46-net451+win81" />
   <package id="Xamarin.Forms" version="2.5.0.91635" targetFramework="portable46-net451+win81" />
 </packages>
