--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -39,6 +39,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converter\ColorChannelsToColorConverter.cs" />
+    <Compile Include="Converter\ColorToColorChannelConverter.cs" />
+    <Compile Include="Effects\Class1.cs" />
+    <Compile Include="Elements\ColoredNavigationPage.xaml.cs">
+      <DependentUpon>ColoredNavigationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Elements\TintedSvgCachedImage.cs" />
     <Compile Include="Converter\AppStimmerAttachmentTypeToViewVisibilityConverter.cs" />
     <Compile Include="Converter\BooleanToVisibilityConverter.cs" />
@@ -365,6 +371,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ContentViews\Settings\AppColorsSettingsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Elements\ColoredNavigationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
