--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.Android/packages.config
@@ -18,6 +18,7 @@
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="monoandroid71" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid71" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="VG.XFShapeView" version="1.0.5" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
