--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer.iOS/packages.config
@@ -18,6 +18,7 @@
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.ios_unified.static" version="1.1.0" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.internal.ios_unified" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="VG.XFShapeView" version="1.0.5" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.4" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.2.25" targetFramework="xamarinios10" />
