--- a/src/MSO.AppStimmer/MSO.Common/MSO.Common.csproj
+++ b/src/MSO.AppStimmer/MSO.Common/MSO.Common.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="AkavacheSqliteLinkerOverride.cs" />
     <Compile Include="CacheHelper.cs" />
+    <Compile Include="ListExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
   </ItemGroup>
