--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Views\ContentViews\Appstimmen\AppStimmerButtonsView.xaml.cs">
       <DependentUpon>AppStimmerButtonsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\ContentViews\AppStimmerEditor\AppStimmerEditorTabbedView.xaml.cs">
+      <DependentUpon>AppStimmerEditorTabbedView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ContentViews\AppStimmerEditor\Attachments\AddAttachmentView.xaml.cs">
       <DependentUpon>AddAttachmentView.xaml</DependentUpon>
     </Compile>
@@ -432,6 +435,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Images\nope.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ContentViews\AppStimmerEditor\AppStimmerEditorTabbedView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.5.0.121934\build\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.targets')" />
