--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/MSO.StimmApp.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Converter\IMultiValueConverter.cs" />
     <Compile Include="Converter\MultiBinding.cs" />
     <Compile Include="Extensions\Colors.cs" />
+    <Compile Include="GradientLabel.cs" />
     <Compile Include="ImageResourceExtension.cs" />
     <Compile Include="MenuPage.xaml.cs">
       <DependentUpon>MenuPage.xaml</DependentUpon>
@@ -110,6 +111,9 @@
       <DependentUpon>CurrentUserView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Elements\SwipeCardView.cs" />
+    <Compile Include="Views\ElementSource.cs" />
+    <Compile Include="Views\ExtendedViewCell.cs" />
+    <Compile Include="Views\MyDataTemplateSelector.cs" />
     <Compile Include="Views\Page1.xaml.cs">
       <DependentUpon>Page1.xaml</DependentUpon>
     </Compile>
